# TimeTracker

./: CMakeLists.txt
TimeTracker/: CMakeLists.txt  CMakePresets.json  TimeTracker.h
TimeTracker/src/: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
libs/core-lib/: CMakeLists.txt
libs/core-lib/include/TimeTracker/core/: TimeEntry.hpp
libs/models-lib/: CMakeLists.txt
libs/ui-lib/: CMakeLists.txt
